2011-04-01  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* MatrixType (MatrixType::operator =): Plug memory leak due to
	improper handling of perm array (bug #32804).

2011-03-29  Rik  <octave@nomad.inbox5.com>

	* Array.cc (diag): Treat empty vector (1x0 or 0x1) as valid input.
	Improves Matlab compatibility (bug #32901).

2011-02-13  David Bateman  <dbateman@free.fr>

	* Sparse-perm-op-defs.h (template <typename SM>
	SM octinternal_do_mul_colpm_sm (const octave_idx_type *,
	const SM&)): Ensure that the row indices are sorted.

2011-03-14  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* Sparse.cc (Sparse<T>::alloc) Change std::copy_backward to
	std::copy, since the destination is at the back and not the
	front. Bug #32747, cf. entry from 2010-11-25

2011-02-08  John W. Eaton  <jwe@octave.org>

	* oct-alloc.h: Include <cstddef>.
	From Orion Poplawski <orion@cora.nwra.com>.

2011-02-06  John W. Eaton  <jwe@octave.org>

	* PermMatrix.cc (operator*): Fix mixed row/column permutation
	case.  Bug #32346.

2011-02-04  Rik  <octave@nomad.inbox5.com>

	* Makefile.am: Undo accidental checkin

2011-02-03  John W. Eaton  <jwe@octave.org>

	* cmd-hist.cc (gnu_history::do_process_histcontrol):
	Rename from command_history::do_process_histcontrol.
	(gnu_history::do_histcontrol): Rename from
	command_history::do_histcontrol.
	* cmd-hist.h (command_history::do_histcontrol): Provide dummy version.
	* cmd-hist.cc (command_history::do_process_histcontrol): Likewise.
	Bug #32325.

2011-02-02  John W. Eaton  <jwe@octave.org>

	* Range.cc (Range::Range (double, double, octave_idx_type)):
	Correctly compute limit from base, increment and number of
	elements.  Bug #32321.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::assign (const idx_vector&, const idx_vector&,
	const Sparse<T>&)): Handle case of LHS originally empty, and
	with non-colon indices.  Fix typo in previous change.  Bug #32263.

2011-01-30  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>
